feat: define ListGpuUsages
